Added workaround for mootools 1.4 bug in which visibility is set to invisible on fades.

--- a/roar.css
+++ b/roar.css
@@ -9,6 +9,7 @@
 	position:				absolute;
 	width:					300px;
 	cursor:					pointer;
+	visibility:				visible !important;
 }
 .roar-bg {
 	position:				absolute;
